--- a/hotel.html
+++ b/hotel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/hotel.css">
+    <link rel="stylesheet" href="/css/hotel.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">    
     <title>Hotel</title>
@@ -19,7 +19,8 @@
     <br>
     <h2 class="texto">Quartos Disponívies</h2>
     <h2 id="reserv" class="texto"></h2>
-</main>
-    <script src="js/hotel.js" ></script>
+    <a href="#" class="botao" onclick="verificaVagas()">reservar</a>
+
+    <script src="js/hotel.js"></script>
 </body>
 </html>
