--- a/hotel.html
+++ b/hotel.html
@@ -13,13 +13,17 @@
 <header>
     <h1 id="nomes" class="titulo"></h1>
 </header>
+<div class ="texto">
     <br>
-    <h2 class="texto">Quartos</h2>
+    <h2> Quartos</h2>
     <h2 id="room" class="texto"></h2>
     <br>
-    <h2 class="texto">Quartos Disponívies</h2>
+    <h2> Quartos Disponívies</h2>
     <h2 id="reserv" class="texto"></h2>
-    <a href="#" class="botao" onclick="verificaVagas()">reservar</a>
+    <br>
+    <br>
+    <button class="button" style="vertical-align:middle" onclick="verificaVagas()"><span>Faça sua reserva</span></button>
+</div>
 
     <script src="js/hotel.js"></script>
 </body>
