atualização do hotel

--- a/hotel.html
+++ b/hotel.html
@@ -11,9 +11,16 @@
 <body class="fundo">
     <br>
 <header>
+    <img src="/image/promoçao.png" width="300" class="image">
+    <div class="caixa1">
+        <h2>  A promoção acaba em :</h2>
+        <h2 id="data"> </h2> 
+        </div>
     <h1 id="nomes" class="titulo"></h1>
+    <p class="cor">É lindo viver!!</p>
 </header>
 <div class ="texto">
+    <div class="caixa">
     <br>
     <h2> Quartos</h2>
     <h2 id="room" class="texto"></h2>
@@ -21,8 +28,9 @@
     <h2> Quartos Disponívies</h2>
     <h2 id="reserv" class="texto"></h2>
     <br>
-    <br>
-    <button class="button" style="vertical-align:middle" onclick="verificaVagas()"><span>Faça sua reserva</span></button>
+    <button class="button" style="vertical-align:middle" onclick="verificaVagas()"><span>Faça sua reserva</span></button>  
+  
+</div>
 </div>
 
     <script src="js/hotel.js"></script>
