--- a/hotel.html
+++ b/hotel.html
@@ -29,7 +29,30 @@
     <h2 id="reserv" class="texto"></h2>
     <br>
     <button class="button" style="vertical-align:middle" onclick="verificaVagas()"><span>Faça sua reserva</span></button>  
-  
+  <div>
+      <form id="form-contato" class="formulario">
+          <label for="nome">Nome:</label>
+          <br>
+          <input type="text" id="nome" name="nome" required>
+          <br>
+          <label for="cpf">CPF:</label>
+          <br>
+          <input type="text" id="cpf" name="cpf" required>
+          <br>
+          <label for="nascimento">Data de nascimento:</label>
+          <br>
+          <input type="date" id="nascimento" name="nascimento" required>
+          <br>
+          <label for ="tel">Telefone:</label>
+          <br>
+          <input type="tel" id="tel" name="tel"required>
+          <br>
+          <label for ="email">E-mail:</label>
+          <br>
+          <input type="email" id="email" name="email" required>
+          <br>
+          <input type="submit" value="Enviar">
+      </div>
 </div>
 </div>
 
