--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 			<li><a href="#" class="ativo">itens</a></li>
 			<li><a href="#" class="ativo">produtos</a></li>
 			<li><a href="#" class="ativo">campeões</a></li>
+			<li><a href="#" class="ativo">comunidade</a></li>
 			<li style="float:right"><a class="ativo cor botao" href="#">login</a></li>
 		</ul>	
 		</nav>
@@ -38,7 +39,7 @@
 	<img src="image/tft.jpg" width="50%" class="image">
 	<img src="image/pengu.png" width=250; class="objeto1">
 	<img src="image/EiAaCKrX0AEtPIx.png" width=250; class="objeto2">
-		<p class="text">Team Fight Tactics é o mais novo sucesso da Riot Games,
+		<p class="text caixa">Team Fight Tactics é o mais novo sucesso da Riot Games,
 		  que trouxe o gênero Auto Chess como um modo de League of Legends (LoL).
 		A modalidade virou febre mundial com o lançamento de Dota Underlords, 
 		que nasceu de um mod de DotA 2. TFT já é um dos games mais assistidos e jogados no mundo, 
@@ -46,11 +47,11 @@
 		seus itens e combinações. Confira, a seguir, cinco dicas para jogar TFT, o Team Fight Tactics do LoL. !</p>
 	<h2>1 – Composições mais fortes no começo, meio e final do jogo</h2>
 	<img src="image/tela.jpg" style="width:500px;height:350px;" class="image1">
-		<p class="text">A maioria dos novos players de TFT tem dúvida se é possível premeditar uma composição a seguir. 
+		<p class="text caixa">A maioria dos novos players de TFT tem dúvida se é possível premeditar uma composição a seguir. 
 			A resposta é: nem sempre. Para ser um bom jogador, o player precisa se adaptar ao que o jogo lhe oferece,
 			modelando sua composição à medida que as cartas aparecem. Para isto, é preciso entender como funcionam algumas composições
 			e qual o benefício delas ao longo da partida.</p>
-		<p class="text">No início de uma nova partida, alguns personagens possuem sinergia com outros encontrados no começo do jogo, 
+		<p class="text caixa">No início de uma nova partida, alguns personagens possuem sinergia com outros encontrados no começo do jogo, 
 			como por exemplo Nidalee e Warwick: ambos os personagens de Tier 1 encontrados facilmente nos níveis iniciais. 
 			Com os dois campeões em campo, o jogador consegue o bônus de Selvagem, conferindo velocidade de ataque crescente 
 			aos dois sempre que atacarem. Ao longo do jogo, é possível ir comprando personagens para aumentar suas combinações, 
@@ -58,36 +59,36 @@
 			Deste modo, o bônus aumenta e a composição fica mais forte.</p>	 
 	<h2>2 – Adapte sua build de acordo com a loja</h2>
 	<img src="image/whatsapp-image-2019-07-03-at-02.36.59.jpg" style="width:500px;height:350px;" class="image1">
-		<p class="text">Os campeões possuem Tiers de um a cinco, que determinam o custo em ouro e sua raridade. Nidalee, por exemplo, 
+		<p class="text caixa">Os campeões possuem Tiers de um a cinco, que determinam o custo em ouro e sua raridade. Nidalee, por exemplo, 
 			é um campeão Tier 1, ou seja, custa um de ouro para comprá-la na loja. Já Gnar é Tier 4, e só está disponível na loja nos 
 			níveis de lenda 5 ou mais, com uma pequena porcentagem.</p>
-		<p class="text">Por isso, é preciso adaptar a composição ao longo do tempo, pois personagens de Tier 4 e 5 só começam a aparecer 
+		<p class="text caixa">Por isso, é preciso adaptar a composição ao longo do tempo, pois personagens de Tier 4 e 5 só começam a aparecer 
 			na loja ao alcançar os níveis 5 e 6 (respectivamente) de lenda. Deste modo, é importante saber qual personagem você quer adquirir 
 			e pensar se vale a pena comprar níveis ou rodar a loja para obter aquele campeão.</p>
 	<h2>Use os melhores itens para sua composição</h2>
 	<img src="image/itens.jpg" style="width:500px;height:350px;" class="image1">
-		<p class="text">Atualmente, temos itens extremamente fortes para determinados campeões que usam mana constantemente, como Ashe, Varus,
+		<p class="text caixa">Atualmente, temos itens extremamente fortes para determinados campeões que usam mana constantemente, como Ashe, Varus,
 			 Aurelion Sol e Sejuani. O player deve buscar qual item se adapta melhor ao jogo atual. Se estiver enfrentando muitos assassinos,
 			  a Dançarina Fantasma é o item ideal, já que torna o seu carry imune à danos críticos. Um Kassasin com velocidade de ataque se 
 			  torna um excelente combatente, recebendo escudo a cada ataque e sendo capaz de segurar e minar a mana dos personagens inimigos.</p>
-		<p class="text">É importante lembrar que os itens do TFT não seguem a mesma premissa dos outros modos de jogo do LoL. Logo, é comum você ver 
+		<p class="text caixa">É importante lembrar que os itens do TFT não seguem a mesma premissa dos outros modos de jogo do LoL. Logo, é comum você ver 
 			   personagens como Ahri usando Lâmina da Fúria de Guinsoo.</p>
 	<h2>4 – Busque personagens ou itens que favoreçam sua composição na “roda”</h2>
 	<img src="image/Carousel-TFT.jpg" style="width:500px;height:350px;" class="image1">
-		<p class="text">Durante as rodadas, haverá um momento em que todos os jogadores serão levados para uma arena especial e poderão escolher um
+		<p class="text caixa">Durante as rodadas, haverá um momento em que todos os jogadores serão levados para uma arena especial e poderão escolher um
 			 campeão, equipado com um item aleatório. O importante aqui é equilibrar o que trará maior impacto para sua composição. 
 			 Se for um personagem específico, busque ele na roda, mas se alguém pegar antes, vá para o plano B e pegue um personagem com uma 
 			 parte de item, visando montar um item que dará upgrade à sua composição.</p>
-		<p class="text">A roda funciona por ordem de picks, inversa à posição na liderança. Ou seja, os jogadores que estiverem com menos pontos irão
+		<p class="text caixa">A roda funciona por ordem de picks, inversa à posição na liderança. Ou seja, os jogadores que estiverem com menos pontos irão
 			 escolher primeiro, enquanto os demais poderão escolher na ordem crescente de pontos. Ainda que um jogador não escolha um campeão, 
 			 a ordem de pick continuará para os demais, portanto, seja rápido.</p>
 	<h2>5 – Equilibre a economia da sua Lenda</h2>
 	<img src="image/gold-e-loja.jpg" style="width:500px;height:350px;" class="image1">
-		<p class="text">A cada rodada, você ganha cinco peças de ouro. Mas é possível receber ouro extra cumprindo alguns requisitos, como por exemplo, 
+		<p class="text caixa">A cada rodada, você ganha cinco peças de ouro. Mas é possível receber ouro extra cumprindo alguns requisitos, como por exemplo, 
 			poupando ouro, e recebendo os juros (a cada 10 moedas de ouro acumuladas, você recebe uma de juros, e o limite máximo é de cinco moedas de 
 			juros). Outras possibilidades de receber ouro são através de sequência de vitórias ou derrotas, e do bônus de três Piratas 
 			(você pode receber até quatro moedas de ouro por baú).</p>
-		<p class="text">O ideal é conseguir equilibrar uma composição sólida com uma quantia de ouro média de 50 moedas. Deste modo, você irá ganhar 
+		<p class="text caixa">O ideal é conseguir equilibrar uma composição sólida com uma quantia de ouro média de 50 moedas. Deste modo, você irá ganhar 
 			pelo menos dez moedas de ouro por rodada, que poderá utilizar para comprar campeões ou para rolar a loja em buscar de personagens 
 			específicos.</p>
 			</div>
@@ -95,7 +96,7 @@
 </main>
 <footer>
 <h3>enjoy your experience</h3>
-<p class="texto">entre em contato:4002-8922</p>
+<p class="texto">entre em contato : 4002-8922</p>
 <img src="image/riot.png" width=75; class="objeto">
 <img src="image/floating-1.png" width=75; class="objeto4">
 </footer>
