--- a/formulario.html
+++ b/formulario.html
@@ -46,7 +46,7 @@
         <br>
         <label for="cpf">CPF:</label>
         <br>
-        <input type="text" id="cpf" name="cpf" maxlength="11"placeholder="CPF sem traços e pontos" required>
+        <input type="text" id="cpf" name="cpf" maxlength="14" placeholder="Somente numeros"pattern="\d{3}\.\d{3}\.\d{3}-\d{2}" required>
         <br>
         <label for="nascimento">Data de nascimento:</label>
         <br>
@@ -54,13 +54,18 @@
         <br>
         <label for ="tel">Telefone:</label>
         <br>
-        <input type="tel" id="tel" name="tel"required>
+        <input type="tel" id="tel" name="tel" placeholder="(xx)9xxxx-xxxx" pattern="\(?\d{2}\)?\s?\d{5}-?\d{4}"required>
         <br>
         <label for ="email">E-mail:</label>
         <br>
-        <input type="email" id="email" name="email" required>
+        <input type="email" id="email" name="email"placeholder="nome@gmail.com" pattern=" ([\w].{3,20})@([\w].+)\.([\w]{3,5})"required>
+        <br>
+        <label for="senha">Senha:</label>
+        <br>
+        <input type="password" id="senha" name="senha"maxlength="12" placeholder="senha com até 12 caracteres" required>
         <br>
         <input type="submit" value="Enviar">
+        <br>
         <br>
         <div>
     </section>
