--- a/academia/index.html
+++ b/academia/index.html
@@ -7,73 +7,170 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 </head>
 <body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a href="#" class="navbar-brand">Academia Firme & Forte</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="navbar-collapse collapse show" id="navbarCollapse" style>
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            <li class="nav-item">
+                <a  href="#" class="nav-link">Inicio</a></li>
+            <li class="nav-item">
+                <a  href="#" class="nav-link">Vantagens</a></li>
+            <li class="nav-item">
+                <a href="#" class="nav-link" >Seja Firme&Forte</a></li>
+            <li class="nav-item">
+                <a href="#" class="nav-link" >Contato</a></li>
+          </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Pesquise" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+        </form>
+      </div>
+  </nav>
+    </header>
     <main>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a href="#" class="navbar-brand">Academia Firme&Forte</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a  href="#" class="nav-link">Inicio</a></li>
-                <li class="nav-item">
-                    <a  href="#" class="nav-link">Vantagens</a></li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" >Seja Firme&Forte</a></li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link" >Contato</a></li>
-            </ul>
-        </nav>
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
             <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="img/hailee-steinfeld-treino-de-fitness-papel-de-parede-1920x1080_48.jpg" class="d-block w-100" alt="musculação na Firme&¨Forte">
+              <div class="carousel-item active"  data-bs-interval="4000">
+                <img src="img/hailee-steinfeld-treino-de-fitness-papel-de-parede-1920x1080_48.jpg" class="d-block w-100">
               </div>
-              <div class="carousel-item">
-                <img src="img/academia-esteira-sozinho-masculino-WilliamChoquette.jpg" class="d-block w-100" alt="Aerobica na Firme&Forte">
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="img/academia-esteira-sozinho-masculino-WilliamChoquette.jpg" class="d-block w-100" >
               </div>
-              <div class="carousel-item">
-                <img src="img/screen-3.jpg" class="d-block w-100" alt="Propaganda da Firme&Forte">
+              <div class="carousel-item" data-bs-interval="2000">
+                <img src="img/screen-3.jpg" class="d-block w-100">
               </div>
             </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
           </div>
+          </div>
+          <hr class="featurette-divider">
           <div class ="container">
-              <div class ="row">
+              <div class ="row" style="text-align: center; padding-top: 20px;">
                   <div class="col-lg-4">   
                     <img src="img/download.jpg" class="rounded-circle" width="140" height="140" alt="logo fitness Firme&Forte">
                     <h2>Mais saúde</h2>
-                    <p>ahuhahauhuahqegghqeqehajhkaghfaghhga
-                    fghaghaghjgfahgafyutaygyagyagaygf
-                    <em>Firme e Forte.</em></p>
-                    <a href="#" class="btn btn-success">Saiba mais></a>
+                    <p>Uma antiga definição de saúde fazia referência apenas à ausência de doenças. 
+                      Mas, atualmente, compreende-se a saúde como um conjunto de ações, hábitos e 
+                      condições que proporcionam o bem-estar geral do ser humano: a qualidade de vida.
+                    <a href="#" class="btn btn-primary">Saiba mais>></a>
                   </div>
                   <div class="col-lg-4">   
                     <img src="img/images.png" class="rounded-circle" width="140" height="140" alt="logo fitness Firme&Forte">
                     <h2>Musculação</h2>
-                    <p>ahuhahauhuahqegghqeqehajhkaghfaghhga
-                        fghaghaghjgfahgafyutaygyagyagaygf
-                        <em>Firme e Forte.</em></p>
-                    <a href="#" class="btn btn-success">Saiba mais></a>  
+                    <p>A musculação é uma modalidade de treinamento físico realizado contra 
+                      resistência de pesos externos, chamada também de treino resistido, 
+                      que tem como objetivo o aumento hipertrofia muscular, ganho de força e potência.
+                    <a href="#" class="btn btn-primary">Saiba mais>></a>  
                 </div>
                 <div class="col-lg-4">   
                     <img src="img/download (1).jpg" class="rounded-circle" width="140" height="140" alt="logo fitness Firme&Forte">
                     <h2>Tenha o corpo definido</h2>
-                    <p>ahuhahauhuahqegghqeqehajhkaghfaghhgafgh
-                    aghaghjgfahgafyutaygyagyagaygf
-                        <em>Firme e Forte.</em></p>
-                    <a href="#" class="btn btn-success">Saiba mais></a> 
+                    <p>er um corpo definido e saudável significa perder gordura, 
+                      tonificar e hipertrofiar seus músculos, melhorar o condicionamento físico, 
+                      a sua aparência e a autoestima, além de adquirir força e resistência.
+                    <a href="#" class="btn btn-primary">Saiba mais>></a> 
                 </div>
-               
+          </div>
+          <hr class="featurette-divider" >
+          <div class="row featurette bg-dark"style="text-align: center;" >
+            <div class="col-md-7">
+              <h2 class="featurette-heading "style="color:aqua" >
+                Venha fazer o seu treino com a gente!
+                E faça de sua vida mais saúdavel.
+                <br>
+                <span class="text-muted" >
+                Temos acompanhamento de profissionais saúde e fazemos o treino ideal para você. </span>
+                </h2>
+                <ul class="list-group lead" >
+                  <li class="list-group-item active" aria-current="true"></li>
+                  <li class="list-group-item">Musculação</li>
+                  <li class="list-group-item">Aeróbica</li>
+                  <li class="list-group-item">Calistenia</li>
+                  <li class="list-group-item">Nutrição</li>
+                  <li class="list-group-item">Acompanhamento</li>
+                </ul>
+            </div>
+            <div class="col-md-5">
+              <img src="img/Imagem-Academia-PNG-1280x720.png" width="100%" height="100%">
               </div>
           </div>
-
+          <hr class="featurette-divider" >
+          <hr class="featurette-divider" >
+          <hr class="featurette-divider" >
+          <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+            <div class="col">
+              <div class="card bg-dark mb-4 rounded-3 shadow-sm">
+                <div class="card-header text-white py-3">
+                  <h4 class="my-0 fw-normal">Básico</h4>
+                </div>
+                <div class="card-body text-white">
+                  <h1 class="card-title pricing-card-title">R$35,00<small class="text-muted fw-light">/mês</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>Marca horário de entrada na academia.</li>
+                    <li>pode malhar até 2 horas diárias.</li>
+                    <li>1 avaliação a cada 2 meses.</li>
+                    <li>Só pode ir na academia que foi feita a inscrição.</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-outline-primary">Contrate</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card bg-dark mb-4 rounded-3 shadow-sm">
+                <div class="card-header text-white py-3">
+                  <h4 class="my-0 fw-normal">Normal</h4>
+                </div>
+                <div class="card-body text-white">
+                  <h1 class="card-title pricing-card-title">R$75,00<small class="text-muted fw-light">/mês</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>pode estacionar.</li>
+                    <li></li>
+                    <li>Priority email support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-primary">Contrate</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card bg-dark mb-4 rounded-3 shadow-sm border-primary">
+                <div class="card-header light py-3 text-white bg-primary border-primary">
+                  <h4 class="my-0 fw-normal">Pro</h4>
+                </div>
+                <div class="card-body text-white">
+                  <h1 class="card-title pricing-card-title">R$120,00<small class="text-muted fw-light">/mês</small></h1>
+                  <ul class="list-unstyled mt-3 mb-4">
+                    <li>30 users included</li>
+                    <li>15 GB of storage</li>
+                    <li>Phone and email support</li>
+                    <li>Help center access</li>
+                  </ul>
+                  <button type="button" class="w-100 btn btn-lg btn-primary">Contrate</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
     </main>
-    <div>
-
-
-    </div>
     <footer>
 
-
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>   
 </body>
